force-app/main/default/objects/MarketJourney__dlm/MarketJourney__dlm.object-meta.xml
<CustomObject>
    <label>Market Journey</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isSqlDmo>false</isSqlDmo>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Market Journey</labelOverride>
        <masterLabel>Market Journey</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
    </mktDataModelAttributes>
</CustomObject>