force-app/main/default/objects/MarketJourney__dlm/fields/ContactEntryMode__c.field-meta.xml
<CustomField>
    <fullName>ContactEntryMode__c</fullName>
    <label>ContactEntryMode</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>ContactEntryMode</labelOverride>
        <masterLabel>ContactEntryMode</masterLabel>
        <refAttrDeveloperName>ContactEntryMode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>