force-app/main/default/objects/MarketJourney__dlm/fields/LastPublishedDate__c.field-meta.xml
<CustomField>
    <fullName>LastPublishedDate__c</fullName>
    <label>Last Published Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Last Published Date</labelOverride>
        <masterLabel>Last Published Date</masterLabel>
        <refAttrDeveloperName>LastPublishedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>