force-app/main/default/objects/MarketJourney__dlm/fields/VersionNumber__c.field-meta.xml
<CustomField>
    <fullName>VersionNumber__c</fullName>
    <label>Version Number</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Version Number</labelOverride>
        <masterLabel>Version Number</masterLabel>
        <refAttrDeveloperName>VersionNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>